tests/integration/snapshots/integration__conformance__n_structure_open_object_string_with_apostrophes.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{'a'
stdout ---

stderr ---
error: unexpected character `'`. expected start of a json value
 --> stdin:1:2
  |
1 | {'a'
  |  ^
