tests/integration/snapshots/integration__conformance__n_structure_single_eacute.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
raw bytes: [233]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
