tests/integration/snapshots/integration__conformance__n_structure_trailing_#.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
{"a":"b"}#{}
stdout ---

stderr ---
error: unexpected character `#`. expected start of a json value
 --> stdin:1:10
  |
1 | {"a":"b"}#{}
  |          ^
