tests/integration/snapshots/integration__conformance__n_structure_trailing_#.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
{"a":"b"}#{}
stdout ---

stderr ---
error: unexpected character `#`. expected start of a json value
 --> stdin:1:10
  |
1 | {"a":"b"}#{}
  |          ^
